--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                         <a class="nav-link" href="contact.html">اتصل بنا</a>
                         <span></span>
                     </li>
-                     <!--  -->
-                     <li class="nav-item a-collapsed">
+                    <!--  -->
+                    <li class="nav-item a-collapsed">
                         <a class="nav-link " href="favorite.html">المفضلة</a>
                     </li>
                     <li class="nav-item a-collapsed">
@@ -83,19 +83,140 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <div class="btn mr-2 a-right-round btn-lg a-bg" style="width: 170px;">
-                                <a class="a-bg" href="./account.html">
+                            <button class="btn mr-2 a-right-round btn-lg a-bg " data-toggle="modal"
+                                data-target="#myModal" style="width: 170px;">
+                                <a class="a-bg" href="">
                                     <i class="far fa-user-circle"></i>
                                     <span class="px-2">حسابى</span>
                                 </a>
-
-                            </div>
+                            </button>
 
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
+
+
+
+
+        <!-- log in modal  -->
+        <div class="modal log-in rounded" id="myModal">
+            <div class="modal-dialog modal-lg rounded">
+                <div class="modal-content ">
+                    <div class="container">
+                        <div class="row">
+
+                            <div class="col">
+                                <img class="mask " src="./imgs/log-in-mask.png" alt="">
+                                <img class="mx-auto d-block main-logo" src="./imgs/main-logo.png" width="250px" alt="">
+                            </div>
+                            <div class="col">
+                                <button type="button" class="btn btn-light rounded-circle a-close"
+                                    data-dismiss="modal">&times;</button>
+                                <div class="form-container shadow-lg a-img-container p-2">
+                                    <form>
+                                        <div class="form-group m-3">
+                                            <label class="" for="">رقم الجوال</label>
+                                            <input type="text" class="form-control form-control-sm " id=""
+                                                aria-describedby="" placeholder="+096 666 9999">
+                                        </div>
+                                        <div class="form-group m-3">
+                                            <label class="" for=""> كلمة المرور</label>
+                                            <input type="password" class="form-control form-control-sm " id=""
+                                                aria-describedby="" placeholder="***********">
+                                        </div>
+                                        <div class="custom-control custom-checkbox">
+                                            <input type="checkbox" class="custom-control-input" id="12" name="12">
+                                            <label class="custom-control-label" for="12">تذكرني</label>
+                                        </div>
+                                        <div class="m-3 text-center">
+                                            <button type="submit" class="btn a-bg m-3 w-100 ">دخول</button>
+                                            <a href="" class="text-danger"> نسيت كلمة المرور ؟</a>
+                                            <hr>
+                                            <button type="submit"
+                                                class="btn btn-primary m-3 w-100 mx-auto d-block">التسجيل من
+                                                خلال الفيس بوك
+                                                <span class="p-1 mr-1 "><i class="fab fa-facebook fa-lg"></i></span>
+                                            </button>
+                                            <button type="submit" class="btn btn-dark m-3 w-100 mx-auto d-block">التسجيل
+                                                من
+                                                خلال أبل
+                                                <span class="p-1 mr-1"><i class="fab fa-apple fa-lg"></i></span>
+                                            </button>
+                                            <button class="btn w-100 a-btn-new" data-toggle="modal"
+                                                data-target="#myModal2" data-dismiss="modal">لا امتلك حساب ؟ تسجيل
+                                                جديد</button>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+                </div>
+            </div>
+        </div>
+        <!--  -->
+        <!-- register  -->
+        <div class="modal log-in rounded" id="myModal2">
+            <div class="modal-dialog modal-lg rounded">
+                <div class="modal-content ">
+                    <div class="container">
+                        <div class="row">
+
+                            <div class="col">
+                                <img class="mask " src="./imgs/log-in-mask.png" alt="">
+                                <img class="mx-auto d-block main-logo" src="./imgs/main-logo.png" width="250px" alt="">
+                            </div>
+                            <div class="col">
+                                <button type="button" class="btn btn-light rounded-circle a-close"
+                                    data-dismiss="modal">&times;</button>
+                                <div class="form-container shadow-lg a-img-container p-2">
+                                    <form>
+                                        <div class="form-group m-3">
+                                            <label class="" for="">اسم المستخدم</label>
+                                            <input type="text" class="form-control form-control-sm " id=""
+                                                aria-describedby="" placeholder="باسم محمود ">
+                                        </div>
+                                        <div class="form-group m-3">
+                                            <label class="" for="">رقم الجوال</label>
+                                            <input type="text" class="form-control form-control-sm " id=""
+                                                aria-describedby="" placeholder="+096 666 9999">
+                                        </div>
+                                        <div class="form-group m-3">
+                                            <label class="" for="">البريد الالكتروني </label>
+                                            <input type="email" class="form-control form-control-sm " id=""
+                                                aria-describedby="" placeholder="username@email.com">
+                                        </div>
+                                        <div class="form-group m-3">
+                                            <label class="" for=""> كلمة المرور</label>
+                                            <input type="password" class="form-control form-control-sm " id=""
+                                                aria-describedby="" placeholder="***********">
+                                        </div>
+                                        <div class="form-group m-3">
+                                            <label class="" for=""> تأكيد كلمة المرور</label>
+                                            <input type="password" class="form-control form-control-sm " id=""
+                                                aria-describedby="" placeholder="***********">
+                                        </div>
+                                        <hr>
+                                        <div class="m-3 text-center">
+                                            <button type="submit" class="btn a-bg m-3 w-100 ">تسجيل</button>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+                </div>
+            </div>
+        </div>
+        <!--  -->
 
         <!-- Starting The Slider  -->
         <div class="slider">
@@ -187,7 +308,9 @@
         <div class="container">
 
             <div class="row a-bg-light-2 rounded shadow py-5">
-                <div class="col-12"><h2 class="text-center">المنتجات</h2></div>
+                <div class="col-12">
+                    <h2 class="text-center">المنتجات</h2>
+                </div>
                 <div class="col-md-3">
                     <a href="">
                         <div class="mx-auto a-img-container bg-light mt-5" style="width: 90%; ">
