--- a/confirm-addres.html
+++ b/confirm-addres.html
@@ -98,90 +98,102 @@
         <!-- Starting  Add Adddres section -->
         <div class="container a-add-addres">
             <h1 class="text-center my-4" style="color: #F8A421;">أدخل العنوان</h1>
-           <div class="a-form-container a-bg-white shadow a-img-container p-5">
-            <form action="" class="">
-                <div class="row my-5">
-                    <div class="col-lg-5 pl-5">
-                        <div class="row">
-                            <div class="col-9 ">
-                                <input class="form-control form-control-lg a-bg-light" type="text"
-                                    placeholder="طريق الملك فهد , الرياض">
-                            </div>
-                            <div class="col">
-                                <div class="btn a-bg btn-lg w-100"><i class="fas fa-map-marker-alt"></i></div>
-                            </div>
-                        </div>
-                        <div class="row my-3">
-                            <div class="col">
-                                <select class="form-control form-control-lg a-bg-light" id="sel1">
-                                    <option>المنطقة</option>
-                                </select>
-                            </div>
-                        </div>
-                        <div class="row my-3">
-                            <div class="col-8">
-                                <div class="form-group">
-                                    <label for="tel">رقم الجوال</label>
-                                    <input class="form-control form-control-lg a-bg-light" type="tel" name="" id=""
-                                        placeholder="98989823 323">
+            <div class="a-form-container a-bg-white shadow a-img-container p-5">
+                <form action="" class="">
+                    <div class="row my-5">
+                        <div class="col-lg-5 pl-5">
+                            <div class="row">
+                                <div class="col-9 ">
+                                    <input class="form-control form-control-lg a-bg-light" type="text"
+                                        placeholder="طريق الملك فهد , الرياض">
+                                </div>
+                                <div class="col">
+                                    <div class="btn a-bg btn-lg w-100" data-toggle="modal" data-target="#myModal"><i
+                                            class="fas fa-map-marker-alt"></i></div>
                                 </div>
                             </div>
-                            <div class="col mt-4 pt-2">
-                                <button class="btn btn-lg a-bg w-100">تغيير</button>
+                            <div class="row my-3">
+                                <div class="col">
+                                    <select class="form-control form-control-lg a-bg-light" id="sel1">
+                                        <option>المنطقة</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="row my-3">
+                                <div class="col-8">
+                                    <div class="form-group">
+                                        <label for="tel">رقم الجوال</label>
+                                        <input class="form-control form-control-lg a-bg-light" type="tel" name="" id=""
+                                            placeholder="98989823 323">
+                                    </div>
+                                </div>
+                                <div class="col mt-4 pt-2">
+                                    <button class="btn btn-lg a-bg w-100">تغيير</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-1 a-border-left">
+                        </div>
+                        <div class="col-1"></div>
+                        <div class="col-lg-5 pr-l">
+                            <h5 class="">وقت التوصيل المناسب</h5>
+                            <div class="row">
+                                <div class="col">
+                                    <div class="form-group">
+                                        <label for="day">اليوم</label>
+                                        <input class="form-control form-control-lg a-bg-light" type="date" name="" id=""
+                                            placeholder="وقت التوصيل المناسب">
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <label for="day">وقت التوصيل</label>
+                                    <select class="form-control form-control-lg a-bg-light" id="sel1">
+                                        <option></option>
+                                    </select>
+                                </div>
+                            </div>
+                            <h5 class="my-2">طريقة الدفع</h5>
+                            <div class="row">
+                                <div class="col">
+                                    <div class="form-check-inline btn btn-lg a-bg p-2 mx-auto d-block">
+                                        <label class="form-check-label " for="radio1">
+                                            <span>عند الاستلام</span>
+                                            <input type="radio" class="form-check-input" id="radio1" name="optradio"
+                                                value="option1" checked>
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="form-check-inline btn btn-lg a-bg p-2 mx-auto d-block">
+                                        <label class="form-check-label" for="radio2">
+                                            <span class="">بطاقة الاتمان</span>
+                                            <input type="radio" class="form-check-input" id="radio2" name="optradio"
+                                                value="option2">
+                                        </label>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-1 a-border-left"> 
-                    </div>
-                    <div class="col-1"></div>
-                    <div class="col-lg-5 pr-l">
-                        <h5 class="">وقت التوصيل المناسب</h5>
-                        <div class="row">
-                            <div class="col">
-                                <div class="form-group">
-                                    <label for="day">اليوم</label>
-                                    <input class="form-control form-control-lg a-bg-light" type="date" name="" id=""
-                                        placeholder="وقت التوصيل المناسب">
-                                </div>
-                            </div>
-                            <div class="col">
-                                <label for="day">وقت التوصيل</label>
-                                <select class="form-control form-control-lg a-bg-light" id="sel1">
-                                    <option></option>
-                                </select>
-                            </div>
-                        </div>
-                        <h5 class="my-2">طريقة الدفع</h5>
-                        <div class="row">
-                            <div class="col">
-                                <div class="form-check-inline btn btn-lg a-bg p-2 mx-auto d-block">
-                                    <label class="form-check-label " for="radio1">
-                                        <span>عند الاستلام</span>
-                                        <input type="radio" class="form-check-input" id="radio1" name="optradio"
-                                            value="option1" checked>
-                                    </label>
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="form-check-inline btn btn-lg a-bg p-2 mx-auto d-block">
-                                    <label class="form-check-label" for="radio2">
-                                        <span class="">بطاقة الاتمان</span>
-                                        <input type="radio" class="form-check-input" id="radio2" name="optradio"
-                                            value="option2">
-                                    </label>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </form>
-           </div>
+                </form>
+            </div>
 
-           <div class="col-12 mt-5">
-            <a href="./order-review.html">
-                <button class=" btn a-bg a-img-container btn-lg w-100" style="height: 70px;"> تأكيد </button>
-            </a>
+            <div class="col-12 mt-5">
+                <a href="./order-review.html">
+                    <button class=" btn a-bg a-img-container btn-lg w-100" style="height: 70px;"> تأكيد </button>
+                </a>
+            </div>
         </div>
+        <!-- map modal -->
+        <div class="modal fade" id="myModal">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14323.207130519135!2d32.70690662301634!3d26.170584200000015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sar!2seg!4v1586212749871!5m2!1sar!2seg"
+                        width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen=""
+                        aria-hidden="false" tabindex="0"></iframe>
+                </div>
+            </div>
         </div>
 
         <!-- Ending Add Adddres section  -->
@@ -316,7 +328,8 @@
                                             <a class="nav-link a-footer-link" href="account.html">حسابي</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link a-footer-link" href="contact-with.html">التواصل مع المسؤلين</a>
+                                            <a class="nav-link a-footer-link" href="contact-with.html">التواصل مع
+                                                المسؤلين</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link a-footer-link" href="terms.html">الشروط والاحكام</a>
